--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-   <div class="container">
+   <main class="container">
      <div class="sedans">
        <img alt="sedan-car-image" src="images/icon-sedans.svg" >
        <h1>SEDANS</h1>
@@ -36,7 +36,7 @@
         rental and arrive in style.</p>
        <button class="luxury-button">Learn More</button>
      </div>
-   </div>
+   </main>
 </body>
 
 </html>
