--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
    <main class="container">
      <div class="sedans">
        <img alt="sedan-car-image" src="images/icon-sedans.svg" >
-       <h1>SEDANS</h1>
+       <h1>sedans</h1>
        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
         or on your next road trip.</p>
         <button class="sedan-button">Learn More</button>
      </div>
      <div class="suvs">
       <img alt="suvs-car-image" src="images/icon-suvs.svg">
-      <h1>SUVS</h1>
+      <h1>suvs</h1>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
         and off-road adventures.</p>
        <button class="suvs-button">Learn More</button>
      </div>
      <div class="luxury">
       <img alt="luxury-car-image" src="images/icon-luxury.svg">
-      <h1>LUXURY</h1>
+      <h1>luxury</h1>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
         rental and arrive in style.</p>
        <button class="luxury-button">Learn More</button>
      </div>
-   </main>
+    </main>
 </body>
 
 </html>
